# calypso-bot

./: Cargo.toml  README.md  config.example.toml
src/: commands.rs  config.rs  data.rs  embeds.rs  events.rs  main.rs
src/commands/: general.rs  owner.rs  sysf.rs
